--- a/app/src/main/res/layout/item_index.xml
+++ b/app/src/main/res/layout/item_index.xml
@@ -6,6 +6,7 @@
 
 
     <android.support.v7.widget.CardView
+        android:id="@+id/cardview_index"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
